
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package VOTE_DELEGATE_PROXY_FACTORY;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/VOTE_DELEGATE_PROXY_FACTORY";

message CreateVoteDelegate {
	google.protobuf.Timestamp ts = 1;
	bytes Delegate = 2;		//	address
	bytes VoteDelegate = 3;		//	address
}
